# veriright-backend

./: README.md  audits.db  fetched_texts_54b6cd42-a4cf-4090-a8ee-ac30cf0e6c61.json  fetched_texts_6554e8ac-830e-4c0a-8812-19f3d4b07fdc.json  main.py  pyproject.toml  requirements.txt
app/agent/: graph.py  nodes.py  state.py
